--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content="Room of Requirement - Media collection app inspired by Harry Potter" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Special+Elite&family=UnifrakturMaguntia&family=Metal+Mania&family=Cinzel:wght@400;700&family=Playfair+Display:wght@400;500;700&display=swap"
+      rel="stylesheet" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Room of Requirement</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
